--- a/custom_components/ckw_hass_gs108e/manifest.json
+++ b/custom_components/ckw_hass_gs108e/manifest.json
@@ -3,6 +3,8 @@
   "name": "CKW GS108e Integration",
   "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/example_load_platform/",
   "dependencies": ["lxml", "requests"],
+  "config_flow": true,
+  "iot_class": "local_polling",
   "codeowners": [],
   "requirements": ["lxml>=4.6.1"],
   "version": "0.2.0"
