--- a/custom_components/ckw_hass_gs108e/manifest.json
+++ b/custom_components/ckw_hass_gs108e/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "ckw_hass_gs108e",
-  "name": "CKW GS108e Integration",
-  "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/example_load_platform/",
+  "name": "Netgear GS108e Integration",
+  "documentation": "https://github.com/ckarrie/ckw-ha-gs108e/blob/main/README.md",
   "config_flow": true,
   "iot_class": "local_polling",
   "codeowners": [],
   "requirements": ["lxml>=4.6.1"],
-  "version": "0.4.5"
+  "version": "0.4.6"
 }
