--- a/custom_components/netgear_plus/manifest.json
+++ b/custom_components/netgear_plus/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "netgear_plus",
-  "name": "Netgear Plus",
+  "name": "NETGEAR Plus",
   "documentation": "https://github.com/ckarrie/ckw-ha-gs108e/blob/main/README.md",
   "config_flow": true,
   "iot_class": "local_polling",
