--- a/custom_components/netgear_plus/manifest.json
+++ b/custom_components/netgear_plus/manifest.json
@@ -6,5 +6,11 @@
   "iot_class": "local_polling",
   "codeowners": [],
   "requirements": ["lxml>=4.6.1"],
+  "ssdp": [
+    {
+      "manufacturer": "NETGEAR",
+      "deviceType": "urn:schemas-upnp-org:device:InternetGatewayDevice:1"
+    }
+  ],
   "version": "0.6.2"
 }
