Refactor manifest.json and strings.json
Update codeowners in manifest.json to include GitHub usernames.
Remove timeout message from strings.json and en.json.

--- a/custom_components/netgear_plus/manifest.json
+++ b/custom_components/netgear_plus/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "netgear_plus",
   "name": "NETGEAR Plus",
-  "codeowners": [ "ckarrie", "foxey"],
+  "codeowners": [ "@ckarrie", "@foxey"],
   "config_flow": true,
   "documentation": "https://github.com/ckarrie/ha-netgear-plus/blob/main/README.md",
   "iot_class": "local_polling",
