--- a/custom_components/netgear_plus/manifest.json
+++ b/custom_components/netgear_plus/manifest.json
@@ -6,7 +6,7 @@
   "documentation": "https://github.com/ckarrie/ha-netgear-plus/blob/main/README.md",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/ckarrie/ha-netgear-plus/issues",
-  "requirements": ["lxml>=4.6.1", "netgear-plus=>0.1.8"],
+  "requirements": ["lxml>=4.6.1", "py-netgear-plus>=0.1.9"],
   "ssdp": [
     {
       "manufacturer": "NETGEAR",
