--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 colorlog==6.9.0
 homeassistant==2024.12.5
 lxml>=4.6.1
-py-netgear-plus==0.3.0
+py-netgear-plus==0.3.1pre1
 pip>=21.3.1
 ruff==0.8.4
